--- a/part1_core_logic/introduction.tex
+++ b/part1_core_logic/introduction.tex
@@ -7,13 +7,19 @@
 
 	\section{写作动机}
 
-	一切始于一连串深夜的讨论。朋友们的质疑与思考像种子一样落地生根：如果社会科学真能像物理一样建立公理化体系，那么它的基石应该在哪里？是否存在一种统一的方法论，能够跨越经济学、政治学、文化人类学等学科的边界，给出一致的解释框架？
+	一切始于一连串\textbf{——不连着实际上，因为是断续的灵感}——深夜的讨论。朋友们的质疑与思考像种子一样落地生根：如果社会科学真能像物理一样建立公理化体系，那么它的基石应该在哪里？是否存在一种统一的方法论，能够跨越经济学、政治学、文化人类学等学科的边界，给出一致的解释框架？
 
 	反复思考之后，答案逐渐清晰：方法论本身，而非具体理论，才是传播和扩散的载体。一个清晰可推导的逻辑链条，远比一堆零散的案例更有生命力。因此，本书的写作动机不仅是为了回答"为什么"，更是为了展示"如何问为什么"。
 
+—————\textbar \textbf{
+	\underline{没人问为啥吗}
+	}
+	
+	那我来吧，因为\textbf{效率}，这根后面信息论\textbf{（part1的第三章，按频率编码可以压缩信息）}也有关系
+	
 	\section{面向读者群体}
 
-本书试图在两个极端之间寻找平衡：一方面是数理严谨性，另一方面是社科可读性。完全偏向任何一端都会损失另一端的读者——过于数学化的论述会吓退缺乏背景的读者，而过于感性的描述又会失去预测能力。
+本书试图在两个极端之间寻找平衡：一方面是数理严谨性，另一方面是社科可读性。完全偏向任何一端都会损失另一端的读者——过于数学化的论述会吓退缺乏背景的读者，而过于感性的描述又会失去预测能力以及——\textbf{失去问为什么和得到数学原理解答的机会}，简而言之就是失去{\large \emph{\textbf{问和答}}}的\textbf{\emph{机会}}（示范了一下信息压缩）。
 
 	因此，本书的目标读者包括：
 	\begin{itemize}
@@ -24,9 +30,11 @@
 
 	\section{结构设计思路}
 
-	\subsection{动机清晰，逻辑唯一}
+	\subsection{ 动机清晰，逻辑唯一}
 
-本书坚持一个核心原则：每个章节必须从一个明确的动机出发，沿着唯一的逻辑链条展开。动机必须清晰到可以用一句话概括，逻辑必须紧凑到每一步都不存在分岔。
+
+本书坚持一个核心原则：每个章节必须从一个明确的
+{\large \emph{\textbf{动机}}}出发，沿着{\large \emph{\textbf{唯一}}}的逻辑链条展开。动机必须清晰到可以用一句话概括，逻辑必须紧凑到每一步都不存在分岔。
 
 	这种设计有两个目的：
 	\begin{enumerate}
