--- a/part1_core_logic/chapter1_nature_motivation.tex
+++ b/part1_core_logic/chapter1_nature_motivation.tex
@@ -15,97 +15,13 @@
 	\vspace{1em}
 
 	\chapter{存在或者毁灭}
-	\label{ch:existence}
-	\begin{motivation}
-		莎士比亚笔下哈姆雷特的永恒困惑：\textbf{存在还是毁灭，这是一个问题。}\\
-		《三体》中\textbf{生存是幸运的偶然}的冷峻陈述。\\
-		\textbf{核心动机}：从文学和科幻的感性描述出发，建立对\textbf{生存}这一概念的物理与数学解释。
-	\end{motivation}
-
-	\section{从语言到自然：作为频率编码的存在}
-
-	你有没有想过，为什么我们每天都在用\textbf{存在}、\textbf{生存}、\textbf{毁灭}这些词，却很少有人停下来问：\textbf{这些词到底意味着什么}？
-
-	你可能觉得这是一个无聊的问题。但实际上，这个问题背后藏着一个惊人的事实：\textbf{语言不仅仅是用来描述世界的，语言本身也在塑造我们如何理解世界。}
-
-	为什么这么说？因为我现在就在用语言向你传递这个想法，而你在用语言理解它。这看起来像是废话，但它揭示了一个深层问题：如果我们不能理解语言的工作原理，我们如何能理解被语言描述的世界？
-
-	\begin{tcolorbox}[colback=yellow!5, title=\textit{读者行为预测}]
-		现在你可能觉得：\textit{这不就是废话吗？语言当然会影响理解啊。}\\
-		是的，但你注意到吗？\textbf{你已经接受了\textit{语言=影响理解的工具}这个假设}。
-	\end{tcolorbox}
-
-	这个假设本身就值得深究——为什么语言能够如此深刻地影响理解？它的机制是什么？
-
-	\subsection{语言是如何压缩信息的？}
-
-	让我们从一个更具体的问题开始：为什么我们用\textbf{存在}这个词，而不是其他词？
-
-	假设你是人类语言的原始设计者。你面前有无数个概念需要命名，但你的大脑只能记住有限数量的词汇。你会怎么做？
-
-	聪明的做法：对最常见的概念，用最短的词；对最罕见的概念，用最长的词。
-
-	\textit{生活类比}：这就像你收拾行李——最常用的东西（手机、钱包）放最外面，很少用的东西（备用充电器）放最里面。
-
-	为什么要这样做？因为这样可以最大化效率。
-
-	这和\textbf{存在}有什么关系？因为\textbf{存在}是一个高频概念——从宇宙大爆炸到你我此刻的呼吸，\textbf{存在}无处不在。所以，语言赋予它一个简短的词。
-
-	\begin{tcolorbox}[colback=yellow!5, title=\textit{读者行为预测}]
-		你现在可能感受到了：\textbf{语言的使用频率，反过来反映了自然现象的发生频率。}
-	\end{tcolorbox}
-
-	这是一个惊人的洞见，但它引出了另一个问题：这种映射是偶然的还是必然的？
-
-	\subsection{莎士比亚的永恒困惑}
-
-	你有没有想过，为什么莎士比亚能写下\textbf{存在还是毁灭，这是一个问题}？
-
-	不是因为他是天才，而是因为\textbf{存在}和\textbf{毁灭}这两个词，在人类历史上被使用了无数次。它们的高频性，使得它们能够被压缩成富有感染力的诗句。
-
-	\textit{半严谨类比}：这就像摩斯密码——字母\textbf{E}用最短的\textit{·}，而\textbf{Q}用最长的\textit{---·}。高频=短码。
-
-	莎士比亚的诗句，正是这种\textbf{压缩}的极致形式：八个英文单词（To be, or not to be），压缩了人类数千年来对\textbf{存在}的思考。
-
-	但压缩是否意味着信息的丢失？如果是，那么语言的精确性从何而来？
-
-	\subsection{归纳：语言作为自然的映射}
-
-	现在，让我们归纳一下我们刚刚探索的内容：
-
-	\textbf{\Large 核心论点1}：\textbf{语言是信息压缩的工具}（常用=短码，罕见=长码）\\
-	\textbf{\Large 核心论点2}：\textbf{语言频率反映自然现象的发生频率}\\
-	\textbf{\Large 核心论点3}：\textbf{文学创作是语言压缩的极致形式}
-
-	这三个论点共同指向一个结论：\textbf{语言不是随意的，而是对自然现象的统计映射。}
-
-	\paragraph*{逻辑衔接}
-	我们刚刚完成了从\textbf{语言压缩机制}到\textbf{语言-自然映射}的推演。接下来的问题是：如果语言映射反映自然现象，那么自然中的\textbf{存在}现象，它的本质是什么？为什么有些东西能存在，而有些必然消亡？
-
-	\subsubsection*{补充说明：语言压缩的数学形式}
-	\begin{tcolorbox}[
-		colback=gray!5,
-		colframe=gray!40,
-		title=\small \textit{严谨推导（可跳过）},
-		fonttitle=\bfseries
-		]
-		\small
-		变长编码（Huffman编码）的基本原理：
-
-		设符号集 $S = \{s_1, s_2, \ldots, s_n\}$，每个符号的出现概率为 $p(s_i)$。
-
-		最优编码长度满足：
-		\[ L(s_i) = -\log_2 p(s_i) \]
-
-		其中 $L(s_i)$ 是符号 $s_i$ 的编码长度。
-
-		因此，高频符号（高 $p$）对应短编码（低 $L$），低频符号对应长编码。
-
-		应用到语言：\textbf{存在}是高频词（$p$ 高），所以它被赋予短编码（\textit{存在}只有两个汉字）。
-	\end{tcolorbox}
-
-	\paragraph*{逻辑衔接}
-	上面的数学推导给出了\textbf{语言压缩机制}的精确形式，但它没有回答一个更根本的问题：\textbf{存在本身}作为自然现象，为什么会在自然中高频出现？它的物理基础是什么？这需要我们从语言层面，深入到物理层面。
+	
+\label{ch:existence}
+\begin{motivation}
+	莎士比亚笔下哈姆雷特的永恒困惑：\textbf{存在还是毁灭，这是一个问题。}\\
+	《三体》中\textbf{生存是幸运的偶然}的冷峻陈述。\\
+	\textbf{核心动机}：从文学和科幻的感性描述出发，建立对\textbf{生存}这一概念的物理与数学解释。
+\end{motivation}
 
 	\section{生存的偶然性：从宇宙尺度到文明尺度}
 
@@ -267,7 +183,23 @@
 
 	很多文化、制度、行为模式并非因为\textit{优越}而存在，仅仅是因为它们\textit{没有致命缺陷}。它们能够在某些环境下存活，不等于它们在任何环境下都最优。
 
-	\textbf{\Large 关键洞见}：我们观察到的制度，是\textbf{幸存者}而非\textbf{胜出者}。\textbf{幸存≠最优}。
+	\textbf{\Large 因此}：我们观察到的制度，是\textbf{幸存者}而非\textbf{胜出者}。\textbf{幸存≠最优}。
+	
+	\subsubsection{因此产生的多样性}
+
+上面说到，只要幸存就可以，这也是我们看到
+
+1.生物多样性
+\\
+2.社会群体多样性——网络上说的物种多样性（狗头）
+\\
+这两个情况存在的原因
+\\
+那么具体的多样性（有多少物种，有多少观点）由什么决定呢，感兴趣的朋友可以参考抽象描述
+\label{main:various}
+
+\mathlink{math:various}{数学链接：多样性跟什么有关？}
+
 
 	\paragraph*{逻辑衔接}
 	我们刚刚讨论了\textbf{中性选择原理}，它揭示了\textbf{存留≠最优}的残酷真相。但问题来了：既然存留的东西不一定最优，那么我们应该如何评估制度的质量？什么样的制度才是真正\textit{可持续}的？这是下一章要讨论的核心问题。
