--- a/part1_core_logic/chapter1_nature_motivation.tex
+++ b/part1_core_logic/chapter1_nature_motivation.tex
@@ -102,22 +102,160 @@
 	\end{tcolorbox}
 
 	但既然是\textit{废话}，为什么它如此重要？因为很多科学理论都忽略了\textit{观察者选择效应}，从而得出错误的结论。
+	
+	
+\subsection{强人存原理：它究竟比弱人存强在哪里？}
 
-	\subsection{强人存原理：宇宙的参数被\textit{锁定}？}
+弱人存原理的核心其实很克制。  
+它只是在提醒我们：  
+\textbf{任何观察结果，都必然带有“只有在这种条件下才能被观察到”的偏差。}
 
-	强人存原理更进一步：不仅我们只能在\textit{允许存在}的宇宙中观察到宇宙，而且宇宙的参数本身可能被某种机制\textit{锁定}在允许存在的范围内。
+这相当于说：  
+你之所以能站在这里谈论宇宙，是因为你恰好处在一个允许你存在的结果里。  
+至于这个结果本身有多罕见，弱人存原理并不试图解释。
 
-	\textit{半严谨类比}：这就像一个只有\textit{适合生存}的岛屿才有居民，而其他岛屿都是无人区。
+强人存原理之所以被称为“强”，并不在于它更自信，  
+而在于它试图把问题往前推一步。
 
-	多世界诠释：存在无数个宇宙，每个宇宙有不同的物理参数。只有在那些参数允许存在的宇宙中，才会有观察者问\textit{为什么参数是这样的？}
+它不满足于“既然发生了，我们才能看到”，  
+而是开始追问：  
+\textbf{为什么在所有可能的参数组合中，存在这样一批允许观察者出现的情况？}
+
+\begin{center}
+	\begin{tabular}{|p{3cm}|p{5cm}|p{5cm}|}
+		\hline
+		\textbf{维度} & \textbf{弱人存原理} & \textbf{强人存原理} \\
+		\hline
+		关注重点 &
+		观察结果的选择偏差 &
+		宇宙参数本身的可解释性 \\
+		\hline
+		核心问题 &
+		“在什么条件下我们才能观察？” &
+		“为什么存在允许观察者的参数组合？” \\
+		\hline
+		对概率的态度 &
+		承认概率很小，但不作解释 &
+		认为概率极小本身需要解释 \\
+		\hline
+		是否引入新结构 &
+		不需要，引入即多余 &
+		通常需要（如多世界、筛选机制） \\
+		\hline
+		解释层级 &
+		认识论层面 &
+		尝试进入解释论层面 \\
+		\hline
+		若失败的后果 &
+		结论仍然成立 &
+		会退化为弱人存原理的重复表述 \\
+		\hline
+	\end{tabular}
+\end{center}
+
+
+一个贴近日常的类比是抽奖。  
+弱人存原理相当于说：  
+你既然能领奖，就说明你一定是中奖者之一，这本身无需额外解释。
+
+而强人存原理关心的是另一层问题：  
+如果“极小概率的中奖”并不是孤立的一次，  
+而是一个系统中反复出现的结果，  
+那我们或许需要看看这个抽奖系统本身是如何被构造的。
+
+在物理学语境中，多世界诠释提供了一种可能的回答路径：  
+存在大量物理参数不同的宇宙实例，  
+而观察者只会出现在其中极少数满足存在条件的分支上。
+
+在这一框架下，  
+“我们为什么抽中了”不再是核心问题，  
+真正的问题变成了：  
+\textbf{为什么会存在这样一个包含大量可行分支的整体结构？}
+
+\begin{tcolorbox}[colback=gray!8, colframe=gray!50, title=\textit{思考}]
+	如果强人存原理最终仍然无法提供任何新的机制，  
+	而只是重复“概率极小，但我们恰好存在”，  
+	那么它是否真的比弱人存原理多解释了什么？
+	
+	反过来，如果我们拒绝多世界或类似的筛选结构，  
+	强人存原理还能否保持其“强”的地位？
+\end{tcolorbox}
+
 
 	\subsection{社会推广：制度的存在条件}
-
-	将人存原理推广到社会领域：
-
-	任何能够持续存在的社会结构，必然满足了某些基本条件。如果某个制度毁灭了，那么它要么不满足这些条件，要么环境发生了剧烈变化。
-
+	
+	如果将人存原理从自然科学推广到社会领域，可以得到一个同样克制、但极具解释力的结论：
+	
+	任何能够被我们长期观察到的社会制度，都必然满足了某些\textbf{最低存在条件}。  
+	它们未必高效、未必公平，甚至未必令人满意，但至少——\textit{还没有触发自身的毁灭机制}。
+	
+	这里需要先做一个重要区分。  
+	制度的“不能存在”，并不只有一种形式。
+	
+	有些结构，一旦不满足存在条件，几乎会立刻崩溃；  
+	而另一些结构，即使已经明显不再适应环境，也可以凭借自身的稳定性与惯性，继续存续相当长的时间。
+	
+	为了避免把这两类情况混为一谈，我们可以将社会结构按其“存在稳定性”作一个粗略分类。
+	
+	
+	\begin{center}
+		\begin{tabular}{|p{3.5cm}|p{5cm}|p{5cm}|}
+			\hline
+			\textbf{维度} & \textbf{低稳定性结构} & \textbf{高稳定性结构} \\
+			\hline
+			对环境变化的敏感度 &
+			极高，条件稍变即难以存续 &
+			较低，可在不利环境中长期维持 \\
+			\hline
+			不满足条件的后果 &
+			迅速消亡或被替代 &
+			先退化、失效，再缓慢崩解 \\
+			\hline
+			典型例子 &
+			不适应环境的物种、小规模脆弱组织 &
+			王朝体制、官僚系统、成熟制度 \\
+			\hline
+			关键约束因素 &
+			资源、适应性、即时反馈 &
+			结构复杂度、路径依赖、惯性 \\
+			\hline
+			观察上的误导 &
+			“失败得太快，仿佛从未存在” &
+			“存在得太久，仿佛仍然合理” \\
+			\hline
+		\end{tabular}
+	\end{center}
+	
+	
+	在日常生活中，这种差异并不难理解。
+	
+	有些习惯一旦不合适，很快就会被放弃。  
+	比如一双明显磨脚的鞋，你可能穿一天就再也不会碰。
+	
+	但也有一些安排，即使已经明显不舒服，却可以持续多年。  
+	比如效率极低的流程、问题重重的公司制度，  
+	或者一段已经失去活力的关系。
+	
+	它们并不是“仍然适合”，  
+	而是：\textbf{要让它们彻底崩溃，所需要的改变成本太高。}
+	
+	社会制度也是如此。  
+	制度的存续，既取决于它是否满足基本存在条件，  
+	也取决于它自身的结构复杂度与由此产生的惯性。
+	
+	
 	\textbf{\Large 关键洞见}：我们观察到的制度，\textbf{不一定是\textit{最优}的}，但\textbf{一定是\textit{允许存在}的}。
+	
+	这也引出了一个自然的问题：
+	
+	如果制度并非因为“最优”而存续，  
+	而是因为结构稳固、惯性巨大，  
+	那么——  
+	\textbf{制度的“效率”、 “正义”与“存续能力”，是否本来就是三个不同的维度？}
+	
+	这一问题，将在下一章对“结构与效率”以及数学附录的讨论中被系统展开。
+	
+	
 
 	\paragraph*{逻辑衔接}
 	人存原理告诉我们\textbf{存在者必然满足存在条件}，但它没有告诉我们：在所有满足条件的东西中，为什么\textit{这一个}存活了而\textit{那一个}消失了？这是否意味着存活的东西就是\textit{最优}的？答案可能会让你惊讶。
