--- a/part1_core_logic/chapter1_nature_motivation.tex
+++ b/part1_core_logic/chapter1_nature_motivation.tex
@@ -402,7 +402,7 @@
 
 	这正是\hyperref[ch:structure]{第2章：结构与效率}要讨论的核心问题。
 
-	\begin{tcolorbox}[colback=blue!5, title=\textit{元认知标注}]
+	\begin{tcolorbox}[colback=blue!5, title=\textit{读者可能的问题}]
 		如果你觉得本章的几个段落看起来有点乱，因为我在用探索的方式引导你思考，而不是直接给出严密的逻辑结构。\textbf{完整逻辑结构见第2章补充说明}。
 
 		这样做的原因：趣味性和结构性的平衡——先用探索引发兴趣，再用严谨建立框架。
