--- a/part1_core_logic/chapter2_structure_efficiency.tex
+++ b/part1_core_logic/chapter2_structure_efficiency.tex
@@ -2,23 +2,298 @@
 
 \begin{document}
 	
-	\chapter{结构与效率：生存的物理学}
-	\begin{motivation}
-		为什么在这个混乱的宇宙中会出现有序的结构？\\
-		\textbf{核心动机}：论证"结构"不是为了美，而是为了"效率"（在竞争中存活的概率）。
-	\end{motivation}
+% ==========================================
+% Chapter 2 · 结构与效率：生存的物理学
+% ==========================================
+
+\chapter{结构与效率：生存的物理学}
+\label{chap:structure_efficiency}
+
+
+\label{sec:selection_filter}
+
+\section{自然选择作为过滤器}
+
+\begin{motivation}
+	在上一章，我们已经反复强调：存留并不等于最优。
+	但如果自然选择并不追求最优，它究竟在系统中扮演什么角色？
+	这一节的目标，是回答这个看似简单、却经常被误解的问题。
+\end{motivation}
+
+\subsection{不是选择最优，而是淘汰不可行}
+
+\begin{readingnote}
+	在绝大多数现实系统中，真正发生的并不是“选出最好的人”，
+	而是“剔除明显不合格的人”。
 	
-	\section{自然选择作为过滤器}
-	自然选择是宇宙中最基本的筛选机制。无论是物理结构、生物体还是社会组织，只有那些能够有效利用资源、维持自身稳定并传递信息的结构才能持续存在。这种筛选过程本质上是一种效率优化过程，它倾向于保留那些在特定环境中表现更优的结构。
+	考试有及格线，产品有上线标准，申请有最低条件。
+	超过这条线的人，往往会一起留下来；
+	低于这条线的人，则直接被淘汰。
+\end{readingnote}
+
+这一现象揭示了一个常被忽略的事实：
+自然选择的主要功能，并不是在所有可能方案中寻找最优解，
+而是在持续运行中，排除那些\lowfreq{无法维持自身存在的结构}。
+
+换句话说，自然选择更像一个过滤器，而不是排序算法。
+
+\mathlink{math:selection_filter}{自然选择作为过滤过程的形式化描述}
+
+\subsection{过滤阈值与及格线结构}
+
+\begin{readingnote}
+	如果一次考试的及格线是 60 分，
+	那么 61 分和 90 分，在“是否通过”这一结果上，并没有本质差别。
 	
-	\section{结构是效率的物理固化}
-	结构不是偶然形成的，而是效率需求的物理体现。在物理世界中，球形是最节能的形状；在生物界，分形结构优化了物质交换；在社会中，等级制度降低了协调成本。这些看似不同的现象背后，都遵循着同样的原则——效率最大化。
+	它们的差异，只会在下一轮筛选中才逐渐显现。
+\end{readingnote}
+
+将这一现象抽象化，我们可以得到一个稳定存在于多种系统中的结构：
+\lowfreq{过滤阈值}。
+
+系统并不关心个体有多优秀，
+它只关心：是否低于某条不可逾越的生存边界。
+一旦跌破这条边界，系统便会迅速将其排除。
+
+\begin{logicmap}
+	候选结构
+	$\rightarrow$ 是否低于生存阈值
+	$\rightarrow$ 淘汰 / 存留
+	$\rightarrow$ 存留者之间不再强制排序
+\end{logicmap}
+
+这也解释了一个在直觉上容易被误解的现象：
+在许多环境中，我们观察到的并不是“最优结构”，
+而是一组\lowfreq{刚好没有被淘汰的结构}。
+
+\mathlink{math:threshold_model}{过滤阈值与及格线模型}
+
+\begin{readingnote}
+	如果自然选择只是不断排除不可行方案，
+	那么一个自然的问题是：
 	
-	\section{案例：从晶体到生物组织的必然性}
-	\subsection{晶体结构的效率}
-	晶体结构通过原子间的规则排列实现了能量的最低状态，这是一种自然形成的高效结构。类似的，社会中的组织结构也是为了实现某种效率而形成的。
+	既然系统并不追求最优，
+	为什么最终留下来的结构，
+	往往看起来却“相当高效”？
+\end{readingnote}
+
+这个问题，将在下一节中被系统回答：
+效率并不是被追求的目标，
+而是结构在约束下自然浮现的结果。
+
+
+\section{结构为什么会产生效率}
+
+\begin{motivation}
+	在上一节中，我们已经把自然选择还原成一个非常“冷漠”的过程：
+	它并不关心谁更优秀，只负责淘汰那些无法维持自身存在的结构。
 	
-	\subsection{生物组织的效率优化}
-	生物体通过进化形成了高度优化的组织结构，这些结构在能量利用、信息传递和环境适应方面表现出卓越的效率。
+	但这立刻引出了一个更直觉、更尖锐的问题：
 	
+	如果系统只是在不断排除不合格者，
+	为什么最终留下来的东西，
+	看起来往往\lowfreq{有层次、有组织，而且还挺高效}？
+\end{motivation}
+
+\subsection{为什么留下来的，往往是有层级的？}
+
+\begin{readingnote}
+	想一想你身边的组织形式。
+	
+	一个三五个人的临时群聊，
+	可以没有分工、没有层级；
+	但一旦人数变多、事情变复杂，
+	你很快就会看到负责人、小组、流程的出现。
+	
+	并不是因为大家突然“喜欢官僚”，
+	而是因为没有这些结构，事情根本运转不下去。
+\end{readingnote}
+
+这里有一个非常重要、但经常被忽略的事实：
+
+\lowfreq{层级结构并不是为了提高上限，而是为了避免崩溃。}
+
+在规模较小、任务简单的情况下，
+扁平结构完全可以存活；
+但当规模、复杂度或持续时间增加，
+缺乏层级的结构更容易在协调、冲突或负担上直接失效。
+
+自然选择并不会“偏好”层级结构，
+但它会持续淘汰那些\lowfreq{在规模扩大后无法稳定运作的形态}。
+
+
+
+
+	\begin{tcolorbox}[colback=yellow!5, title=\textit{读者行为预测}]
+		
+	读到这里，你可能会产生一个反感的念头：
+	
+	“这听起来像是在为复杂结构、甚至低效的官僚体系辩护。”
+	
+	这是一个非常自然的反应，
+	但也是一个需要立刻澄清的误解。
+\end{tcolorbox}
+
+\begin{readingnote}
+	\lowfreq{一个绕不开的问题：}
+	
+	如果层级结构只是为了“避免崩溃”，
+	那是不是意味着——
+	
+	只要一个体系还能勉强运转，
+	哪怕它臃肿、低效、令人痛苦，
+	我们也应该对它保持容忍？
+	
+	换句话说：
+	这种解释，会不会变成一种
+	“反正还能活着，所以不用改”的借口？
+\end{readingnote}
+
+\begin{readingnote}
+	\lowfreq{一个不太舒服，但很常见的例子：}
+	
+	想一想那些你明知效率很低、
+	却长期存在的流程或制度。
+	
+	它们通常具备几个特征：
+	\begin{itemize}
+		\item 处理问题很慢，但不至于完全停摆
+		\item 决策很保守，但很少立刻出大错
+		\item 每一步都让人不满，但很少触发致命冲突
+	\end{itemize}
+	
+	这些结构之所以还能存在，
+	并不是因为它们“做得好”，
+	而是因为它们\lowfreq{足够不容易出事}。
+\end{readingnote}
+
+
+
+这里的论断并不是：
+层级结构一定更好，
+而是：
+
+\lowfreq{在某些规模和约束下，没有层级的结构更容易先死。}
+
+自然选择只负责这一件事：谁先死。
+至于留下来的结构是否优雅、高效、令人满意，
+并不在它的考虑范围之内。
+
+\subsection{效率不是被追求的目标，而是副产物}
+
+\begin{readingnote}
+	很多人在解释效率时，会下意识地引入“设计”：
+	
+	流程是被优化过的，
+	结构是被精心规划的，
+	所以结果才显得高效。
+	
+	但现实中，大量高效结构的起点，
+	并不是“想提高效率”，
+	而是“撑不下去了”。
+\end{readingnote}
+
+考虑一个极其常见的场景：
+
+当事情还很少时，
+随意沟通、随时调整，反而最省事；
+但当任务变多、重复出现、持续时间拉长，
+原本灵活的方式会迅速变成负担。
+
+这时出现的结构变化——
+分工、流程、固定接口——
+并不是因为它们\emph{最优}，
+而是因为\lowfreq{它们让系统勉强活了下来}。
+
+效率在这里，并不是目标，
+而是一个结果：
+\lowfreq{减少出错、减少冲突、减少崩溃机会}。
+
+\begin{logicmap}
+	规模扩大 / 持续时间增加
+	$\rightarrow$ 原有方式更易失效
+	$\rightarrow$ 结构被迫固定
+	$\rightarrow$ 可重复性上升
+	$\rightarrow$ 看起来更高效
+\end{logicmap}
+
+\subsection{为什么看起来低效的结构还能长期存在？}
+
+\begin{readingnote}
+	你可能马上会想到反例：
+	
+	很多组织、制度、流程，
+	明明效率低下、令人不满，
+	却依然可以存在多年，甚至几十年。
+	
+	如果效率是自然选择的结果，
+	那它们为什么还没被淘汰？
+\end{readingnote}
+
+这个问题本身，恰恰说明了上一节结论的边界。
+
+自然选择并不会比较两个都能活下来的结构，
+只会淘汰\lowfreq{活不下来的那个}。
+
+只要一个结构：
+\begin{itemize}
+	\item 不会立刻引发自身崩溃
+	\item 能承受环境中的主要冲击
+\end{itemize}
+
+它就可以长期存在，
+哪怕它在我们的主观评价中显得笨重、迟缓、浪费。
+
+这也意味着：
+
+\lowfreq{“还能活着”，本身就是一个极其宽松的标准。}
+
+\mathlink{math:survival_constraint}{生存约束与结构存留的形式化条件}
+
+\begin{readingnote}
+	到这里，我们已经可以得到一个暂时但稳定的认识：
+	
+	结构与效率，
+	并不是自然选择“追求”的目标，
+	而是系统在反复避免失败过程中，
+	逐渐留下来的形态特征。
+	
+	接下来，一个更具体的问题自然浮现：
+	
+	如果这种机制在社会和组织中成立，
+	那在自然界中，
+	是否也能看到类似的结果？
+\end{readingnote}
+
+这个问题，将在下一节中通过具体案例展开：
+从晶体，到生命。
+
+
+
+
+\section{案例：从晶体到生命}
+\label{sec:cases}
+
+\subsection{晶体结构的效率}
+\label{subsec:crystal}
+
+\subsection{生物组织的效率优化}
+\label{subsec:biology}
+
+\section{效率的代价：结构僵化}
+\label{sec:rigidity}
+
+\subsection{局部最优与路径依赖}
+\label{subsec:local_optima}
+
+\section{本章小结与衔接}
+\label{sec:summary_ch2}
+
+\subsection{回扣：结构是存在的结果}
+\label{subsec:recap}
+
+\subsection{衔接到下一章：语言如何固化结构}
+\label{subsec:bridge_language}
+
+
 \end{document}
