--- a/part1_core_logic/introduction.tex
+++ b/part1_core_logic/introduction.tex
@@ -7,7 +7,7 @@
 
 	\section{写作动机}
 
-	一切始于一连串\textbf{——不连着实际上，因为是断续的灵感}——深夜的讨论。朋友们的质疑与思考像种子一样落地生根：如果社会科学真能像物理一样建立公理化体系，那么它的基石应该在哪里？是否存在一种统一的方法论，能够跨越经济学、政治学、文化人类学等学科的边界，给出一致的解释框架？
+	一切始于一连串\textbf{——实际上不是一连串，因为是断续的灵感}——深夜的讨论。朋友们的质疑与思考像种子一样落地生根：如果社会科学真能像物理一样建立公理化体系，那么它的基石应该在哪里？是否存在一种统一的方法论，能够跨越经济学、政治学、文化人类学等学科的边界，给出一致的解释框架？
 
 	反复思考之后，答案逐渐清晰：方法论本身，而非具体理论，才是传播和扩散的载体。一个清晰可推导的逻辑链条，远比一堆零散的案例更有生命力。因此，本书的写作动机不仅是为了回答"为什么"，更是为了展示"如何问为什么"。
 
@@ -61,29 +61,184 @@
 
 如果你已经具备相关知识背景，可以根据自己的兴趣选择章节。每个章节的\textbf{逻辑地图}都标明了该章节在整体框架中的位置和前后依赖关系，帮助你快速定位。
 
+
+
+\subsection{正向建构与反向学习：两种线性遍历方式}
+
+上一节给出了两种阅读路径建议。
+但在继续之前，有必要澄清一个更底层的结构问题：
+
+\emph{如果读者既可以从基本原理向下阅读，
+	也可以从具体问题向上回溯，
+	这两种线性路径是否在逻辑上彼此冲突？}
+
+如果这一问题未被明确回答，读者在后续章节中
+往往会反复产生一种隐性的困惑：
+当前采用的理解路径，是否偏离了“正确”的理论结构。
+
+本节的目标不是引入新的理论内容，
+而是说明：\textbf{正向建构与反向学习并非两套世界观，
+	而是对同一结构的两种线性遍历方式。}
+	
+\begin{figure}[h]
+	\centering
+	\begin{tikzpicture}[
+		node distance=1.2cm,
+		every node/.style={draw, rectangle, rounded corners, align=center}
+		]
+		
+		% 正向建构
+		\node (p0) {基本原理};
+		\node (p1) [below=of p0] {结构约束};
+		\node (p2) [below left=of p1] {现象 A};
+		\node (p3) [below right=of p1] {现象 B};
+		
+		\draw[-{Stealth}] (p0) -- (p1);
+		\draw[-{Stealth}] (p1) -- (p2);
+		\draw[-{Stealth}] (p1) -- (p3);
+		
+		\node [left=2.8cm of p1] {\textbf{正向建构}};
+		
+	\end{tikzpicture}
+	\hspace{3cm}
+	\begin{tikzpicture}[
+		node distance=1.2cm,
+		every node/.style={draw, rectangle, rounded corners, align=center}
+		]
+		
+		% 反向学习
+		\node (g0) {目标 / 问题};
+		\node (g1) [above=of g0] {工具选择};
+		\node (g2) [above left=of g1] {概念 A};
+		\node (g3) [above right=of g1] {概念 B};
+		
+		\draw[-{Stealth}] (g0) -- (g1);
+		\draw[-{Stealth}] (g1) -- (g2);
+		\draw[-{Stealth}] (g1) -- (g3);
+		
+		\node [left=2.8cm of g1] {\textbf{反向学习}};
+		
+	\end{tikzpicture}
+	\caption{正向建构与反向学习的两种线性展开方向}
+\end{figure}
+
+
+\begin{readingnote}
+	\textbf{学习与建构的方向差异}
+	
+	\begin{itemize}
+		\item 在典型的学习过程中，理解往往从一个明确目标开始，
+		围绕“要解决什么问题”逐层展开所需的工具与概念。
+		\item 这一过程对应的是一种\textbf{反向展开}的树状结构：
+		目标在上，工具在下。
+		\item 理论建构则通常从尽量少、尽量稳定的基本假设出发，
+		通过分类与约束逐步演绎出可能的结构与现象。
+		\item 这对应的是一种\textbf{正向生长}的展开方式：
+		原理在上，现象在下。
+	\end{itemize}
+	
+	两者的差异，并不来自对世界的不同判断，
+	而来自对同一结构的不同遍历起点。
+	
+	\vspace{0.5em}
+	\textbf{归纳与演绎的结构前提}
+	
+	\begin{itemize}
+		\item 在反向学习路径中，归纳推断占据核心位置，
+		其有效性依赖于若干隐含前提：
+		系统存在稳态、时间尺度足够长，
+		且噪声为有限方差的微扰。
+		\item 在这些条件下，统计平均能够压制随机偏差，
+		经验分布随时间逐渐收敛。
+		\item 从控制视角看，这对应的是一种\textbf{负反馈}结构。
+		\item 在正向建构路径中，演绎推理占据主导地位，
+		其安全性依赖于假设的明确性、
+		逻辑链条的唯一性以及计算精度是否可控。
+		\item 在某些经验规律即将失效或尚未形成的区域，
+		演绎推理仍可能给出有效约束甚至预言。
+	\end{itemize}
+	
+	需要强调的是，在高度微扰敏感的区域，
+	归纳与演绎都存在风险；
+	但当结构假设成立且数值精度可控时，
+	演绎推理并不必然比归纳更不安全。
+\end{readingnote}
+
+
+
+\begin{table}[h]
+	\centering
+	\caption{反向学习与正向建构的视角差异}
+	\begin{tabular}{lll}
+		\toprule
+		视角 & 反向学习（归纳） & 正向建构（演绎） \\
+		\midrule
+		起点 & 明确目标 & 基本假设 \\
+		主要风险 & 数据偏置、局部最优 & 假设错误、微扰放大 \\
+		控制特征 & 负反馈、稳态 & 正反馈、临界性 \\
+		随机过程 & 时间平均 & 结构约束 \\
+		适用范围 & 高复杂、可采样系统 & 低维、可演绎系统 \\
+		\bottomrule
+	\end{tabular}
+\end{table}
+
+
+\paragraph{演绎为主，归纳验证}
+在基础结构可清晰演绎、但参数需由实验确定的情形中，
+演绎提供结构约束，归纳用于验证与修正。
+
+\paragraph{归纳为主，理论约束}
+在计算复杂度极高、无法完整建模的系统中，
+归纳承担主要认知角色，
+理论更多用于排除不可能结构与限制搜索空间。
+
+\paragraph{临界与过渡区域}
+在相变或临界区域附近，
+经验规律可能突然失效，
+此时归纳与演绎均存在风险，
+但演绎模型有时能够提前标记危险边界。
+
+\paragraph{说明}
+本节仅用于澄清阅读路径与推理方式的结构关系，
+不涉及具体模型与技术细节。
+有关稳态失效、微扰敏感性以及相变边界的严格讨论，
+将在后续章节中分别展开。
+
+
+\paragraph{小结}
+本节的目的不是要求读者在不同方法之间做出选择，
+而是说明：
+本书后续内容允许在正向与反向两种线性路径之间切换。
+如果在阅读过程中感到理解顺序不自然，
+这通常不是错误，
+而是视角切换的结果。
+
+
 	\subsection{示例：为什么要问"为什么"}
 
-	现在，让我们用一个具体问题来演示本书的核心方法论。
+现在，让我们用一个具体问题来演示本书的核心方法论。
 
-	假设有人问："你为什么要这么认真地追问'为什么'？"
+假设有人问："你为什么要这么认真地追问'为什么'？"
 
-	回答：因为只有问"为什么"，才能挖到现象的根本原因。
+回答：因为只有问"为什么"，才能挖到现象的根本原因。
 
-	紧接着的追问："为什么要挖到根本原因？"
+紧接着的追问："为什么要挖到根本原因？"
 
-	回答：因为一旦掌握了根本原因，就不需要"集邮式"地收集各种具体案例。当遇到新问题或新现象时，你可以从根本原因出发，推导出可能的解决方案。即使做不到严格的演绎推理，至少也能大幅提高检索效率——你知道应该从哪个方向去寻找答案。
+回答：因为一旦掌握了根本原因，就不需要"集邮式"地收集各种具体案例。当遇到新问题或新现象时，你可以从根本原因出发，推导出可能的解决方案。即使做不到严格的演绎推理，至少也能大幅提高检索效率——你知道应该从哪个方向去寻找答案。
 
-	再追问："这有什么实际意义？"
+再追问："这有什么实际意义？"
 
-	回答：这让我们有能力预言罕见现象和罕见问题。如果某个问题在历史上只出现过一次，通过分析其根本原因，我们可以判断类似情境下是否可能再次发生，以及如何应对。
+回答：这让我们有能力预言罕见现象和罕见问题。如果某个问题在历史上只出现过一次，通过分析其根本原因，我们可以判断类似情境下是否可能再次发生，以及如何应对。
+
 
 	\subsection{章节预告}
 
 上述思考路径将在后续章节中系统展开：
-	\begin{itemize}
-		\item \hyperref[ch:existence]{第1章 存在或者毁灭}：从存在本身的意义出发，讨论生存与毁灭的物理基础
-		\item \hyperref[ch:structure]{第2章 结构与效率}：为什么有些结构能够存活，而有些必然崩溃？
-		\item \hyperref[ch:language]{第3章 语言与分类}：我们如何用语言压缩信息，以及这种压缩本身如何限制我们的理解
-	\end{itemize}
+\begin{itemize}
+	\item \hyperref[ch:existence]{第1章 存在或者毁灭}：从存在本身的意义出发，讨论生存与毁灭的物理基础
+	\item \hyperref[ch:structure]{第2章 结构与效率}：为什么有些结构能够存活，而有些必然崩溃？
+	\item \hyperref[ch:language]{第3章 语言与分类}：我们如何用语言压缩信息，以及这种压缩本身如何限制我们的理解
+\end{itemize}
+
 
 \end{document}
