--- a/part1_core_logic/chapter2_structure_efficiency.tex
+++ b/part1_core_logic/chapter2_structure_efficiency.tex
@@ -260,16 +260,15 @@
 	
 	接下来，一个更具体的问题自然浮现：
 	
-	如果这种机制在社会和组织中成立，
-	那在自然界中，
-	是否也能看到类似的结果？
+	他是怎么在具体案例中展现出来的
 \end{readingnote}
 
 这个问题，将在下一节中通过具体案例展开：
-从晶体，到生命。
+王朝周期率，是因为什么
 
 
-
+\section{效率的代价：结构僵化}
+\label{sec:rigidity}
 
 \section{案例：从晶体到生命}
 \label{sec:cases}
@@ -280,8 +279,7 @@
 \subsection{生物组织的效率优化}
 \label{subsec:biology}
 
-\section{效率的代价：结构僵化}
-\label{sec:rigidity}
+
 
 \subsection{局部最优与路径依赖}
 \label{subsec:local_optima}
